--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,5 @@ meta(name="viewport", content="width=device-width,initial-scale=1")
 meta(http-equiv="X-UA-Compatible", content="ie=edge")
 title Test
 form(action="http://localhost:5000/login", method="POST")
-  input(type="text", name="vorname", placeholder="vorname")
-  input(type="text", name="nachname", placeholder="Nachname")
+  input(type="text", name="nummer", placeholder="Nummer")
   button(type="submit") Senden
